examples/test/testpolicy15606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15606
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key44: value6
      key4: value0
      key29: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value7
      podSelector:
        matchLabels:
          key19: value11
